# Vps-auto-maintain

./: .gitignore  E2E_TESTING_COMPLETE.md  LICENSE  LoadCredential升级报告.md  README.md  README_EN.md  README_detect_ports.md  Telegram-Bot.sh  VPS_TG_BOT_加密配置修复完成报告.md  VPS_TG_BOT_加密配置修复方案.md  VPS_TG_BOT_加密配置修复验证报告.md  deploy-firewall-tools_zh-CN.sh  deploy-test.sh  deploy.sh  detect_ports.sh  detect_ports_clean.sh  detect_ports_fixed.sh  detect_ports_repair.sh  detect_ports_ultimate.sh  detect_ports_ultimate_add_Fail2Ban  detect_ports_ultimate_add_Fail2Ban.sh  install.sh  rss-security-auto-update.sh  security-auto-update.sh  test.sh  test_encrypted_config_fix.sh  test_encrypted_config_fix_validation.sh  test_interactive_config.sh  vps_secure.sh  vps_secure_auto.sh  vps_secure_v2ray-agent.sh  vps_secure_xpanel.sh  vps_secure_xpanel_fixed.sh  vps_secure_xpanel_fixed_v2.sh  下载预编译二进制修复报告.md  功能对比分析报告.md  加密配置加载失败问题分析报告.md  环境变量配置方案迁移报告.md
Rust/vps-tg-bot/: COMPLETE_FIX_REPORT.md  CONTEXT7_SCHEDULER_FIX_REPORT.md  CRON_EXPRESSION_FIX_REPORT.md  CRON_FIX.md  CRON_VALIDATION_REPORT.md  Cargo.toml  ENHANCED_SCHEDULER.md  FEATURE_GAP_ANALYSIS.md  FINAL_COMPLETE_FIX_REPORT.md  IMPROVED_SCHEDULER.md  INTEGRATION_TEST_REPORT.md  LOADCREDENTIAL_FIX_REPORT.md  MENU_FIX_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  SYSTEM_TASK_TYPE_FIX_REPORT.md  TEST_GAP_ANALYSIS.md  TEST_IMPROVEMENT_REPORT.md  UNIT_TEST_SUMMARY.md  diagnose_credential_loading.sh  maintenance_history.json  scheduler_state.json  simple_test.rs  test_fix  verify_fix.md
Rust/vps-tg-bot/.claude/: settings.local.json
Rust/vps-tg-bot/.github/workflows/: rust-e2e-tests.yml
Rust/vps-tg-bot/src/: bot.rs  config.rs  error.rs  lib.rs  main.rs  scheduler.rs  system.rs
Rust/vps-tg-bot/src/bot/: mod.rs
Rust/vps-tg-bot/src/config/: migration.rs  mod.rs  types.rs
Rust/vps-tg-bot/src/config/crypto/: kdf.rs  (+3 more)
Rust/vps-tg-bot/src/scheduler/: integration_tests.rs  maintenance_history.rs  mod.rs  task_types.rs  task_types_tests.rs
Rust/vps-tg-bot/src/system/: error_tests.rs  errors.rs  info.rs  mod.rs  ops.rs  update.rs
Rust/vps-tg-bot/tests/: e2e_test.rs  integration_test.rs  scheduler_test.rs
Rust/vps-tg-bot/tests/common/: mocks.rs
Rust/vps-tg-bot/tests/e2e/: Dockerfile.e2e  E2E_TESTING.md  performance_test.rs  podman-compose.yml  run_podman_e2e.sh  security_test.rs
(+123 files in other folders)
