[package]
name = "vps-tg-bot"
version = "0.1.0"
edition = "2024"

# 查看更多键及其定义，请访问 https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.29"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tokio-cron-scheduler = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"